--- a/Static/css/styles.css
+++ b/Static/css/styles.css
@@ -1,7 +1,10 @@
-.portfolioList{
-    text-align: center;
+.list{
+    
     border: 1px;
     border-color: red;
     border-style: solid;
+}
+p.list{
+    text-align: center;
 }
 
