You can now create and delete portfolios

--- a/Templates/base.html
+++ b/Templates/base.html
@@ -8,7 +8,7 @@
 <body>
     <nav>
         <a href="{{ url_for('index') }}">FlaskApp</a>
-
+        <a href="{{ url_for('create') }}">Create new Portfolio</a>
         <a href="#">About</a>
     </nav>
     <hr>
