--- a/Static/css/styles.css
+++ b/Static/css/styles.css
@@ -8,3 +8,9 @@ p.list{
     text-align: center;
 }
 
+.alert {
+    padding: 20px;
+    margin: 5px;
+    color: #970020;
+    background-color: #ffd5de;
+}
