--- a/Templates/index.html
+++ b/Templates/index.html
@@ -10,6 +10,7 @@
             <h3>{{portfolio.name}}</h3>
             <p>{{portfolio.money}}</p>
             <a href="{{ url_for('portfolioOverview', portfolio=portfolio.name) }}">Select</a>
+            <a href="{{ url_for('delete', portfolio=portfolio.name) }}">Select</a>
         </div>
     {% endfor %}
 {% endblock %}
