Complete overhaul of how stocks are stored. You can also now buy new stocks (although prices aren't generated and there are stub data values)

--- a/Static/css/styles.css
+++ b/Static/css/styles.css
@@ -14,3 +14,9 @@ p.list{
     color: #970020;
     background-color: #ffd5de;
 }
+
+a {
+    padding: 0px 10px;
+    word-wrap: normal;
+    display: inline-block;
+  }
