You can now purchase stocks and have their value automatically updated on the portfolio screen (you can not sell stocks at the moment)

--- a/Templates/portfolio.html
+++ b/Templates/portfolio.html
@@ -23,7 +23,7 @@
     </div>
     {% endfor %}
 
-    <a href="{{ url_for('addStock', portfolio=portfolio.name) }}"> ADD STOCK</a>
+    <a href="{{ url_for('addStockCode', portfolio=portfolio.name) }}"> ADD STOCK</a>
     
 
 
