--- a/Templates/stockQty.html
+++ b/Templates/stockQty.html
@@ -11,7 +11,7 @@
     <h2>${{price}} per share</h2>
     <form method = "post">
 
-        <label for="qty">Qty you wish to buy</label>
+        <label for="qty">Qty you wish to buy/sell</label>
         <br>
         <input type="text" name="qty"
         placeholder="0"
